fix reference to api at the main page

--- a/uFeed.WEB/Views/Home/Index.cshtml
+++ b/uFeed.WEB/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
         one place and keep it easy to surf and comfortable to read. Also, it’s possible to divide the content into custom categories to show it separately.
         When the world will include uFeed it becomes much easier to view a big amount of data (news, funny pictures, videos etc.) separately, quickly and conveniently.
     </p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Go to API &raquo;</a></p>
+    <p><a href="/help" class="btn btn-primary btn-lg">Go to API &raquo;</a></p>
 </div>
